[gd_scene load_steps=15 format=3 uid="uid://duelks2gfiai"]

[ext_resource type="Theme" uid="uid://dgdf26xsndhdf" path="res://themes/game_theme.tres" id="1_1xn57"]
[ext_resource type="Texture2D" uid="uid://d0w2s8w8a66sa" path="res://textures/rock_wall.png" id="1_bwyvu"]
[ext_resource type="Texture2D" uid="uid://cwjcqvnt4o8sy" path="res://scenes/gradient.tres" id="2_dcsgs"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="2_k1rnm"]
[ext_resource type="Script" path="res://game/difficulty.gd" id="3_agm0q"]
[ext_resource type="Resource" uid="uid://dhjm8j1du734k" path="res://difficulties/easy.tres" id="4_h544q"]
[ext_resource type="Resource" uid="uid://cirr7njydwnsv" path="res://difficulties/normal.tres" id="5_g73ta"]
[ext_resource type="Resource" uid="uid://bf123ypktqdsr" path="res://difficulties/test.tres" id="6_2mqf1"]
[ext_resource type="PackedScene" uid="uid://bcr3d4de0e2be" path="res://scenes/dungeon.tscn" id="6_5uyfd"]
[ext_resource type="PackedScene" uid="uid://c73fmv5je0fpg" path="res://objects/volume_control.tscn" id="10_mmo8x"]
[ext_resource type="AudioStream" uid="uid://e8sht22a7j40" path="res://music/menu.ogg" id="11_tag1o"]

[sub_resource type="Animation" id="Animation_0wr1g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_5ghbh"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5gkix"]
_data = {
"RESET": SubResource("Animation_0wr1g"),
"fade_out": SubResource("Animation_5ghbh")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1xn57")
script = ExtResource("2_k1rnm")
difficulties = Array[ExtResource("3_agm0q")]([ExtResource("4_h544q"), ExtResource("5_g73ta"), ExtResource("6_2mqf1")])
card_scene = ExtResource("6_5uyfd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_bwyvu")
stretch_mode = 1

[node name="Gradient" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 721.0
offset_right = 720.0
offset_bottom = 2005.0
rotation = 4.71239
texture = ExtResource("2_dcsgs")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -296.0
offset_right = 384.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 124
bbcode_enabled = true
text = "[center]Card[/center]
[center][wave]Dungeon[/wave][/center]"

[node name="MainOptions" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -8.0
offset_right = 192.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 648.0
offset_right = 575.0
offset_bottom = 696.0
theme_override_font_sizes/font_size = 48
text = "Game by MetalPizzaCat"

[node name="OptionsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -8.0
offset_right = 192.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="DifficultyOptions" type="VBoxContainer" parent="OptionsContainer"]
layout_mode = 2

[node name="ExitButton2" type="Button" parent="OptionsContainer"]
layout_mode = 2
text = "Exit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5gkix")
}

[node name="VolumeControl" parent="." instance=ExtResource("10_mmo8x")]
layout_mode = 1
offset_left = 16.0
offset_top = 40.0
offset_right = 16.64
offset_bottom = 39.84

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_tag1o")
autoplay = true
bus = &"Music"

[node name="DebugLabel" type="Label" parent="."]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 512.0
offset_right = 755.0
offset_bottom = 16.0
text = "This is a pre-release build"

[connection signal="pressed" from="OptionsContainer/ExitButton2" to="." method="_on_exit_button_pressed"]
